# fold-artist-spin-trak

./: Experiments.md  README.md  microservice.py  pyproject.toml
clap/clap_meta_data/: clap_genre.ipynb  clap_instrumentation.ipynb  clap_mood.ipynb
clap/embedding/: aligning_audio_and__text_embeddings.ipynb
experiments_configs/: experiment_1.yaml  experiment_3.yaml  experiment_4.yaml
meta_data/: complete_json_meta_data.ipynb  integrated_meta_data.ipynb
meta_data/emotions/: mood.ipynb
meta_data/genre/: genre.ipynb
meta_data/key_tempo/: key_tempo.ipynb
meta_data/lyrics/: lyrics.ipynb
meta_data/midi/: keys_bpm.ipynb
meta_data/stems/: demucs.ipynb  spleeter.ipynb
mgai_finetuner/audiocraft-musicgen-fine-tuner/: finetuning_music_gen_without_cog.ipynb
src/fold_audiocraft/: train.py
src/fold_audiocraft/metrics/: fad.py
src/fold_audiocraft/models/: builders.py  genmodel.py  lm.py  loaders.py  unet.py
src/fold_audiocraft/modules/: conditioners.py  streaming.py
src/fold_audiocraft/solvers/: base.py  musicgen.py
src/fold_audiocraft/utils/: checkpoint.py  export.py  export_legacy.py
src/spintrak/: generate_audio.py  gradients.py  initialization.py  main.py  modified_audiocraft_generation.py  spin_trak.py  spin_trak_v7.py  tensorlogs.py  utils.py
src/spintrak/experiments/: experiment1_generate_results_graph.py  experiment3_generate_results_graph.py  experiment4_generate_results_graph.py  experiment_runner.py
tests/: tests.py
trak/: trak_demo.ipynb
